--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,6 +17,8 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
+  <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
+  <%= form.hidden_field :image_cache %>
   <%= form.submit %>
 <% end %>
 <%= link_to "ブログ一覧画面にもどる", blogs_path %>
