--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @blog, local: true) do |form| %>
+<%= form_with(model: @blog, url: choose_new_or_edit, local: true) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
@@ -17,7 +17,10 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
+  <% if @blog.image.present? %>
+    <%= image_tag blog.image.url %>
+  <% end %>
+  <%= form.file_field :image %>
   <%= form.hidden_field :image_cache %>
   <%= form.submit %>
 <% end %>
