--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,11 +1,13 @@
 <h3>以下の内容で、送信する。</h3>
-<%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
-  <%= form.hidden_field :title %>
-  <%= form.hidden_field :content %>
+<%= form_with(model: @blog, local: true) do |form| %>
   <p>タイトル:<%= @blog.title %></p>
   <p>本文:<%= @blog.content %></p>
-  <td><%= image_tag @blog.image %></td>
-  <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
+<% if @blog.image.present? %>
+  <%= image_tag @blog.image.url %>
+<% end %>
+  <%= form.hidden_field :title %>
+  <%= form.hidden_field :content %>
+  <%= form.hidden_field :image %>
   <%= form.hidden_field :image_cache %>
   <%= form.submit  "登録する" %>
   <%= form.submit "戻る", name: 'back' %>
