--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,7 +9,9 @@
   <tr>
     <td><%= blog.title %></td>
     <td><%= blog.content %></td>
-    <td><%= image_tag blog.image %></td>
+    <% if blog.image.present? %>
+      <td><%= image_tag blog.image.url %></td>
+    <% end %>
     <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
     <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %></td>
     <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
