--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,4 +22,8 @@
     <% end %>
     <%= yield %>
   </body>
+  <footer>
+    <p>運営会社DIVE INTO CODE株式会社</p>
+    <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
+  </footer>
 </html>
