--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ブログ一覧</h1>
+<h1 class ="top">ブログ一覧</h1>
 <p><%= notice %></p>
 <table>
   <tr>
@@ -9,12 +9,14 @@
   <tr>
     <td><%= blog.title %></td>
     <td><%= blog.content %></td>
-    <% if blog.image.present? %>
-      <td><%= image_tag blog.image.url %></td>
-    <% end %>
     <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
     <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %></td>
     <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
+  </tr>
+  <tr>
+    <% if blog.image.present? %>
+    <td><%= image_tag blog.image.url %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
