--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <h1 class ="top">ブログ一覧</h1>
 <p><%= notice %></p>
 <table>
@@ -9,17 +7,18 @@
   </tr>
 <% @blogs.each do |blog| %>
   <tr>
-    <td><%= blog.title %></td>
-    <td><%= blog.content %></td>
+    <td>タイトル：<%= blog.title %></td>
+    <td>内容：<%= blog.content %></td>
+    <td><%= blog.user.name %>の投稿</td>
     <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
     <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' } %></td>
     <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
   </tr>
-  <tr>
+  <table>
     <% if blog.image.present? %>
     <td><%= image_tag blog.image.url %></td>
     <% end %>
-  </tr>
+  </table>
 <% end %>
 </table>
 <%= link_to '新しくブログを投稿する', new_blog_path %>
