フレームの完成

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -24,4 +24,4 @@
   <%= form.hidden_field :image_cache %>
   <%= form.submit %>
 <% end %>
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<%= link_to "投稿一覧画面にもどる", blogs_path %>
