--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,7 @@
-<h1>ブログ詳細画面</h1>
+<h1>投稿詳細画面</h1>
 <p>タイトル: <%= @blog.title %></p>
 <p>内容: <%= @blog.content %></p>
-
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<% if @blog.image.present? %>
+<p><%= image_tag @blog.image.url %></p>
+<% end %>
+<%= link_to "投稿一覧画面にもどる", blogs_path %>
