ログイン機能改良

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>ページの編集</h1>
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
@@ -20,5 +20,5 @@
   <%= f.password_field :password_confirmation %>
   <%= f.file_field :image %>
   <%= f.hidden_field :image_cache %>
-  <%= f.submit "Create my account" %>
+  <%= f.submit "update my account" %>
 <% end %>
