--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @user.name %>のページ</h1>
 <p>メールアドレス: <%= @user.email %></p>
+<% if @user.image.present? %>
+<td><%= image_tag @user.image.url %></td>
+<% end %>
 
-<%= link_to "投稿一覧画面へ", blogs_path %>
+<h3><%= link_to "投稿一覧画面へ", blogs_path %></h3>
+<h3><%= link_to "ページの編集", edit_user_path %></h3>
