サインアップ時修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,10 @@
 <td><%= image_tag @user.image.url %></td>
 <% end %>
 
+<% if logged_in? %>
 <h3><%= link_to "投稿一覧画面へ", blogs_path %></h3>
 <h3><%= link_to "お気に入り一覧画面へ", favorites_path %></h3>
 <h3><%= link_to "ページの編集", edit_user_path %></h3>
+<% else %>
+   <h3>ログインしてください</h3>
+<% end %>
